--- a/src/Components/ProjectDropper/ProjectDropper.scss
+++ b/src/Components/ProjectDropper/ProjectDropper.scss
@@ -33,4 +33,5 @@
 .dropper-project {
     scroll-snap-align: none;
     margin-top: 0;
+    height: 100%;
 } 
