--- a/src/Components/SinglePost/SinglePost.scss
+++ b/src/Components/SinglePost/SinglePost.scss
@@ -8,7 +8,7 @@
 .post{
         
         width: 90vw;
-        max-height: 50vh;
+        max-height: 80vh;
         padding: 1rem;
         margin-top:1vh;
         margin-bottom: 10vh;
@@ -47,7 +47,7 @@
             }
             &-portrait{
                 aspect-ratio: 9/16;
-                height: 60vh;
+                height: 40vh;
                 width: 50%;
                 align-items: start;
                 justify-content: start;
